k8s/base/open-webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: llm-devops
spec:
  selector:
    app: open-webui
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
